--- a/index.html
+++ b/index.html
@@ -560,25 +560,29 @@
                 <td rowspan="10">Cambrien</td>
                 <td rowspan="3">Furongien</td>
                 <td>Étage 10</td>
-                <td class="espece-cell" data-etage="Etage10"></td>
+                <td class="espece-cell">
+                  <p>Pas d'espèces connues apparues à cet étage</p>
+                </td>
                 <td>≃489,5</td>
               </tr>
               <tr>
                 <td>Jiangshanien</td>
-                <td class="espece-cell" data-etage="Jiangshanien"></td>
+                <td class="espece-cell">
+                  <p>Pas d'espèces connues apparues à cet étage</p>
+                </td>
                 <td>≃494</td>
               </tr>
               <tr>
                 <td>Paibien</td>
-                <td class="espece-cell" data-etage="Paibien"></td>
+                <td class="espece-cell">
+                  <p>Pas d'espèces connues apparues à cet étage</p>
+                </td>
                 <td>≃497</td>
               </tr>
               <tr>
                 <td rowspan="3">Miaolingien</td>
                 <td>Guzhangien</td>
-                <td class="espece-cell">
-                  <p>Pas d'espèces connues apparues à cet étage</p>
-                </td>
+                <td class="espece-cell" data-etage="Guzhangien"></td>
                 <td>≃500,5</td>
               </tr>
               <tr>
