Statut construction site

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <body>
     <header>
       <h1>Cambri & Today</h1>
+      <p>
+        Ce site est en cours de construction. Pour l'instant, seule la période
+        du Cambrien est consultable... Venez voyager plus tard &#128521; !
+      </p>
     </header>
     <main>
       <section>
