ajout de quelques espèces

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <header>
       <h1>Cambri & Today</h1>
       <p>
-        Ce site est en cours de construction. Pour l'instant, seule la période
-        du Cambrien est consultable... Venez faire un safari plus tard &#128521;
-        !
+        Ce site est en cours de construction. Pour l'instant, seuls quelques
+        animaux sont cachés dans le temps... Venez faire un safari complet plus
+        tard &#128521; !
       </p>
     </header>
     <main>
@@ -613,9 +613,7 @@
             </tr>
             <tr>
               <td>Étage 3</td>
-              <td class="espece-cell">
-                <p>Pas d'espèces connues apparues à cet étage</p>
-              </td>
+              <td class="espece-cell" data-etage="Etage3"></td>
               <td>≃521</td>
             </tr>
             <tr>
